<resources>
    <string name="app_name">ZOMATO</string>
    <string name="caption_text">Food Delivery App</string>
    <string name="Edit_Text">Enter Mobilenumber</string>
    <string name="Edit_Text1">Enter Password</string>
    <string name="Button1">Login</string>
    <string name="Edit_Text2">Welcome to ZOMATO</string>
    <string name="Button2">Restaurtants</string>
    <string name="Edit_Text3">Restaurtants</string>
    <string name="Edit_Text4">Restaurtant names</string>
    <string name="Button3">Dining</string>


</resources>