<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/metrophobic"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption_text"
        android:fontFamily="@font/metrophobic"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Edit_Text2"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/list_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:text="@string/Button2"
        android:textAlignment="center" />

    <Button
        android:id="@+id/customlistview_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:text="@string/Button3"
        android:textAlignment="center" />

</LinearLayout>