<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/metrophobic"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption_text"
        android:fontFamily="@font/metrophobic"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/mobilenumber_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_bg"
        android:hint="@string/Edit_Text"
        android:inputType="text|phone"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:hint="@string/Edit_Text1"
        android:inputType="textPassword"
        android:maxLength="30"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColorHint="@color/black"
        android:background="@drawable/button_bg"
        android:textSize="30sp"/>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginRight="150dp"
        android:layout_marginLeft="150dp"
        android:text="@string/Button1"
        android:background="@color/white"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Admin Login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="120dp"
        android:onClick="openAdmin"/>


 </LinearLayout>